--- a/vr/index.html
+++ b/vr/index.html
@@ -11,12 +11,11 @@
       // Initialize the React VR application
       ReactVR.init(
         // When you're ready to deploy your app, update this line to point to
-        // your compiled index.bundle.js
-        '../index.vr.bundle?platform=vr&dev=true',
+        './build/index.bundle.js',
+        // '../index.vr.bundle?platform=vr&dev=true',
         // Attach it to the body tag
         document.body
       );
     </script>
   </body>
 </html>
-
