--- a/vr/index.html
+++ b/vr/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <!-- When you're ready to deploy your app, update this line to point to your compiled client.bundle.js -->
-    <script src="./client.bundle?platform=vr"></script>
+    <script src="./build/client.bundle.js"></script>
+    <!-- <script src="./client.bundle?platform=vr"></script> -->
     <script>
       // Initialize the React VR application
       ReactVR.init(
