--- a/vr/index.html
+++ b/vr/index.html
@@ -6,14 +6,14 @@
   </head>
   <body>
     <!-- When you're ready to deploy your app, update this line to point to your compiled client.bundle.js -->
-    <script src="./build/client.bundle.js?platform=vr"></script>
-    <!-- <script src="./client.bundle?platform=vr"></script> -->
+    <!-- <script src="./build/client.bundle.js?platform=vr"></script> -->
+    <script src="./client.bundle?platform=vr"></script>
     <script>
       // Initialize the React VR application
       ReactVR.init(
         // When you're ready to deploy your app, update this line to point to
-        './build/index.bundle.js?platform=vr',
-        // '../index.vr.bundle?platform=vr&dev=true',
+        // './build/index.bundle.js?platform=vr',
+        '../index.vr.bundle?platform=vr&dev=true',
         // Attach it to the body tag
         document.body
       );
